# risten

./: Cargo.toml
docs/: IMPLEMENTED.md  README.md  ROADMAP.md
docs/design/: component_boundaries.md  core_concepts.md  gateway_philosophy.md  static_first_philosophy.md  system_requirements.md
docs/research/: case_study_sakuramiya.md  discord_frameworks.md  ecosystem_survey.md  tech_stack_selection.md
risten/: Cargo.toml
risten-core/: Cargo.toml
risten-macros/: Cargo.toml
risten-std/: Cargo.toml
risten-std/src/: lib.rs  static_dispatch.rs  testing.rs
risten-std/src/dynamic/: collected.rs  mod.rs  registry.rs  router.rs  routing.rs
risten-std/src/hooks/: logging.rs  mod.rs  timeout.rs
risten-std/src/listeners/: filter.rs  map.rs  mod.rs
risten-std/src/routing/: dispatch.rs  mod.rs  trie.rs
risten-std/src/static_dispatch/: fanout.rs
risten/src/: lib.rs
risten/src/core/: context.rs  error.rs  message.rs  mod.rs  response.rs
risten/src/flow/: borrowed.rs  handler.rs  hook.rs  listener.rs  mod.rs  pipeline.rs  routing.rs
risten/src/orchestrator/: dynamic.rs  macros.rs  mod.rs  registry.rs  static.rs  static_fanout.rs  traits.rs
risten/src/orchestrator/delivery/: mod.rs  sequential.rs  traits.rs
risten/src/std/: mod.rs  presets.rs
risten/src/std/hooks/: conditional.rs  logging.rs  mod.rs  routing.rs  timeout.rs  tower.rs  tracing.rs
risten/src/std/listeners/: filter.rs  map.rs  mod.rs  optional_map.rs
risten/src/std/routing/: const_router.rs  hashmap.rs  matchit.rs  mod.rs  phf.rs  trie_router.rs
risten/tests/: architecture_demo.rs  delivery.rs  derive_and_filter.rs  dispatch_simple.rs  dispatch_static.rs  distributed_test.rs  enum_dispatch_test.rs  fast_track_test.rs  integration_pipeline.rs  integration_routing.rs  macro_integration.rs  router_rearch_test.rs  routing.rs
risten/tests/common/: mod.rs
tests/: mod.rs
(+28 files in other folders)
